# Blokus-Reinforcement-Learning

./: .gitignore  Blokus.py  BlokusEnv_gym.py  Blokus_RL_gym.py  Board.py  CLAUDE.md  DisplayEngine.py  Game.py  MCTS.py  Piece.py  README.md  RL_agent.py  game_state.py  generate_video.py  heuristics.py  pyproject.toml  requirements.txt  setup_cython.py
blokus/: __init__.py
blokus/agents/: __init__.py  alpha_zero.py
blokus/engine/: __init__.py  _legal_moves.pyx  board.py  game_state.py  heuristics.py  piece.py
blokus/mcts/: __init__.py  mcts.py
blokus/nn/: __init__.py  network.py
configs/: bugfix-v1.yaml  default.yaml  exp-all-fixes.yaml  exp-baseline.yaml  exp-dropout.yaml  exp-score-diff.yaml  full.yaml  scale-v1.yaml  scale-v2-score-diff.yaml  small.yaml
legacy/: Game.py  Player.py
scripts/: benchmark_vacc.py  benchmark_vacc.sbatch  diagnose_value_head.py  evaluate.py  generate_video.py  profile_training.py  train.py
slurm/: train_alphazero.sh
tests/: test_alpha_zero.py  test_game_state.py  test_mcts_correctness.py
