[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blokus-alphazero"
version = "0.1.0"
description = "AlphaZero-inspired self-play RL agent for the board game Blokus"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pygame>=2.1.0",
]
dev = [
    "pytest>=7.0.0",
]
train = [
    "wandb>=0.15.0",
]
all = [
    "blokus-alphazero[viz,dev,train]",
]

[tool.setuptools.packages.find]
include = ["blokus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
